Bug 176473 - [PATCH] fix KDialog to use platform native layout spacing and margins
Summary: [PATCH] fix KDialog to use platform native layout spacing and margins
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.1
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-29 18:33 UTC by Christoph Feck
Modified: 2009-04-14 18:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
fix KDialog layout spacing and margins by using style's defaults (5.44 KB, patch)
2008-11-29 18:34 UTC, Christoph Feck
Details
this one does not fail applying... stupid whitespace (5.28 KB, patch)
2008-11-29 19:43 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2008-11-29 18:33:03 UTC
Version:            (using Devel)
Installed from:    Compiled sources

KDialog used to have fixed values for spacing and margins. This patch makes it use the style's values, resulting in platform native spacing and margins (which can be different depending on widget pairs, see QStyle::layoutSpacingImplementation() ).

Applications should not use marginHint(), spacingHint(), resizeLayout(), and updateGeometry() if possible. These should be deprecated.

For compatibility, the marginHint() and spacingHint() values can still be queried, and they are now delegated to the style. KStyle returns the same default values as old KDialog, so no behaviour change. resizeLayout() and updateGeometry is unchanged for compatibility.

Styles can reimplement QStyle::layoutSpacingImplementation() and QStyle::PM_Layout*Margin to override defaults.
Comment 1 Christoph Feck 2008-11-29 18:34:25 UTC
Created attachment 28930 [details]
fix KDialog layout spacing and margins by using style's defaults

apply to kdelibs/kdeui
Comment 2 Christoph Feck 2008-11-29 19:43:03 UTC
Created attachment 28931 [details]
this one does not fail applying... stupid whitespace
Comment 3 Christoph Feck 2008-12-23 23:48:52 UTC
Committed as r896422.
Comment 4 Christoph Feck 2009-04-14 18:21:01 UTC
SVN commit 953863 by cfeck:

Use platform native spacing and margins

* use default layout spacing instead of spacingHint()
* remove some unneccessary setMargin() calls
* document that K*Box use 0 as default, and how to change that

CCBUG:176473


 M  +1 -2      kate/dialogs/katedialogs.cpp  
 M  +0 -3      kate/plugins/autobookmarker/autobookmarker.cpp  
 M  +1 -2      kate/plugins/wordcompletion/docwordcompletion_config.cpp  
 M  +0 -1      kate/utils/kateglobal.cpp  
 M  +3 -9      kate/utils/kateprinter.cpp  
 M  +3 -5      kate/utils/kateschema.cpp  
 M  +1 -2      kdeui/colors/kcolordialog.cpp  
 M  +0 -2      kdeui/dialogs/kconfigdialog.cpp  
 M  +0 -6      kdeui/dialogs/kedittoolbar.cpp  
 M  +0 -6      kdeui/dialogs/kinputdialog.cpp  
 M  +2 -2      kdeui/dialogs/kmessagebox.cpp  
 M  +1 -1      kdeui/dialogs/kpixmapregionselectordialog.cpp  
 M  +0 -1      kdeui/dialogs/kshortcutschemeseditor.cpp  
 M  +0 -1      kdeui/dialogs/kswitchlanguagedialog_p.cpp  
 M  +0 -2      kdeui/dialogs/ktip.cpp  
 M  +0 -4      kdeui/findreplace/kfinddialog.cpp  
 M  +0 -6      kdeui/fonts/kfontchooser.cpp  
 M  +0 -1      kdeui/fonts/kfontrequester.cpp  
 M  +0 -1      kdeui/itemviews/kfilterproxysearchline.cpp  
 M  +0 -1      kdeui/itemviews/ktreewidgetsearchline.cpp  
 M  +0 -3      kdeui/paged/kpageview_p.cpp  
 M  +0 -2      kdeui/shortcuts/kcheckaccelerators.cpp  
 M  +0 -1      kdeui/sonnet/configwidget.cpp  
 M  +2 -4      kdeui/tests/kcolorcombotest.cpp  
 M  +5 -7      kdeui/tests/kcomboboxtest.cpp  
 M  +0 -2      kdeui/tests/kcompletionuitest.cpp  
 M  +0 -2      kdeui/tests/klineedittest.cpp  
 M  +5 -4      kdeui/util/kpassivepopup.cpp  
 M  +0 -2      kdeui/widgets/kactionselector.cpp  
 M  +0 -1      kdeui/widgets/kdatetimewidget.cpp  
 M  +6 -1      kdeui/widgets/khbox.h  
 M  +0 -1      kdeui/widgets/klanguagebutton.cpp  
 M  +3 -0      kdeui/widgets/kvbox.h  
 M  +0 -1      kfile/kdirselectdialog.cpp  
 M  +0 -2      kfile/kfileplaceeditdialog.cpp  
 M  +1 -3      kfile/kfilewidget.cpp  
 M  +0 -2      khtml/ecma/debugger/errordlg.cpp  
 M  +0 -3      khtml/java/kjavaappletserver.cpp  
 M  +0 -2      khtml/khtml_printsettings.cpp  
 M  +0 -4      kio/kfile/kacleditwidget.cpp  
 M  +0 -1      kio/kfile/kfilemetapreview.cpp  
 M  +0 -3      kio/kfile/kfilesharedialog.cpp  
 M  +0 -2      kio/kfile/kicondialog.cpp  
 M  +0 -1      kio/kfile/kmetaprops.cpp  
 M  +10 -3     kio/kfile/kopenwithdialog.cpp  
 M  +0 -1      kio/kfile/kpreviewprops.cpp  
 M  +1 -12     kio/kfile/kpropertiesdialog.cpp  
 M  +1 -2      kio/kfile/kurlrequester.cpp  
 M  +0 -2      kio/kio/kmimetypechooser.cpp  
 M  +1 -2      kio/kio/kstatusbarofflineindicator.cpp  
 M  +0 -1      kio/kio/pastedialog.cpp  
 M  +0 -4      kio/kio/renamedialog.cpp  
 M  +0 -2      kio/kssl/ksslcertdialog.cpp  
 M  +0 -3      kio/tests/kioslavetest.cpp  
 M  +1 -3      kioslave/http/kcookiejar/kcookiewin.cpp  
 M  +0 -1      knewstuff/knewstuff2/ui/itemsview.cpp  
 M  +0 -1      knewstuff/knewstuff2/ui/kdxstranslation.cpp  
 M  +0 -1      knewstuff/knewstuff2/ui/uploaddialog.cpp  
 M  +0 -1      kutils/kcmodulecontainer.cpp  
 M  +0 -1      kutils/kcmoduleproxy.cpp  
 M  +0 -2      kutils/ksettings/componentsdialog.cpp  
 M  +0 -2      security/crypto/certexport.cpp  
 M  +2 -19     security/crypto/crypto.cpp  
 M  +0 -2      security/crypto/kdatetimedlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=953863