Fix KDialog to use platform native layout spacing and margins

This patch moves the margin and spacing values to KStyle, meaning
with Oxygen and other KStyle classes there is no difference. However,
some Qt styles, such as QMacStyle, implement layoutSpacing() and
do not use fixed values, and KDialog now respects the style's layout.

Also deprecate functions that call deprecated QLayout::setMargin() or
return fixed values, notably sizeHint() and marginHint().

More layout fixes may need to be done to individual applications, but it
should amount to removing margin and spacing properties from .ui files
or from code for the cases where platform native layout is desired.

BUG: 176473

svn path=/trunk/KDE/kdelibs/; revision=896422